test/analyzer/input_programs/invalid_programs/program04.tea
# nested declaration not allowed!
a := b := 2